# ChronosExec

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/aee/core/: order.hpp  symbol_registry.hpp  thread_pool.hpp  thread_pool.tpp  types.hpp
include/aee/interfaces/: i_market_simulator.hpp  i_scheduler.hpp
include/aee/simulation/: adaptive_scheduler.hpp  naive_scheduler.hpp  simple_market_simulator.hpp  simulation_loop.hpp
src/: benchmark.cpp  main.cpp  parallel_main.cpp  test_concurrency.cpp
src/core/: order.cpp  thread_pool.cpp
src/simulation/: adaptive_scheduler.cpp  naive_scheduler.cpp  simple_market_simulator.cpp  simulation_loop.cpp
